Fix downloadattachment overlapping border
The downloadattachment div in elevator-dark was overlapping the
top border of messagebody.

--- a/share/static/css/elevator-dark/main.css
+++ b/share/static/css/elevator-dark/main.css
@@ -205,6 +205,11 @@
     background: rgba(255, 255, 255, 0) !important;
 }
 
+.darkmode .transaction table + div.downloadattachment {
+    position: relative;
+    top: 0.6em;
+}
+
 .darkmode svg.icon-bordered {
     border: solid 0.05em #717171;
 }
